vcl/win/dtrans/WinClipboard.hxx
@@ -59,18 +59,18 @@ class CWinClipboard final
     CMtaOleClipboard m_MtaOleClipboard;
     CXNotifyingDataObject* m_pCurrentClipContent;
     com::sun::star::uno::Reference<com::sun::star::datatransfer::XTransferable> m_foreignContent;
-    osl::Mutex m_aContentMutex;
-    osl::Mutex m_aContentCacheMutex;
     comphelper::OInterfaceContainerHelper4<css::datatransfer::clipboard::XClipboardListener>
         maClipboardListeners;
 
-    void notifyAllClipboardListener();
+    void clearCacheAndAllClipboardListener();
     void onReleaseDataObject(CXNotifyingDataObject* theCaller);
 
     void registerClipboardViewer();
     void unregisterClipboardViewer();
 
     static void WINAPI onClipboardContentChanged();
+
+    css::uno::Reference<css::datatransfer::XTransferable> getContents_noLock();
 
 public:
     CWinClipboard(const css::uno::Reference<css::uno::XComponentContext>& rxContext,
